# 3D_visualizer

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: main.cpp
hans_visual/: CMakeLists.txt
hans_visual/CMakeLists/: CMakeLists (executable-ubuntu).txt  CMakeLists(a-ubuntu).txt  CMakeLists(exe-windows).txt  CMakeLists(lib-windows).txt  CMakeLists_Ubuntu_Client.txt
hans_visual/Client_CMakeLists/: Ubuntu_make_CMakeLists.txt  Windows_MVS_CMakeLists.txt
hans_visual/src/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  controls.cpp  controls.hpp  main.cpp  shader.cpp  visualizerClass.cpp  visualizerClass.hpp
hans_visual/src/trash/: controls.cpp  visualizerClass.cpp
src_example/: main.cpp
src_visual/: controls.cpp  controls.hpp  shader.cpp  visualizerClass.hpp
